# arduino-espeak-ng

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  library.properties  patch.sh  setup.py  utils.h
arduino/: README.md  audio_audiotools_i2s.cpp  audio_object.h  common-ext.h  common.h  config-espk.h  config.h  direntx.h  espeak.h  posix-fs.h
arduino/patches/: dictionary.patch  dirent.patch  libespeak.patch  soundicon.patch  speak_lib.patch  spect.patch  speech.patch  synthdata.patch  voices.patch
data/bootstrap/: audio_audiotools_i2s.cpp  audio_object.h
data/espeak-ng-data/: be_dict  es_dict  fa_dict  phonindex  ru_dict
data/phsource/: compile_prog_log  compile_report
docs/html/: Alex_8h.html  Alex_8h_source.html  Alicia_8h.html  Alicia_8h_source.html  Andrea_8h.html  Andrea_8h_source.html  Andy_8h.html  Andy_8h_source.html  Annie_8h.html  Annie_8h_source.html  AnxiousAndy_8h.html  AnxiousAndy_8h_source.html  Demonic_8h.html  Demonic_8h_source.html  Denis_8h.html  Denis_8h_source.html  Diogo_8h.html  Diogo_8h_source.html  Gene2_8h.html  Gene2_8h_source.html  Gene_8h.html  Gene_8h_source.html  Henrique_8h.html  Henrique_8h_source.html  Hugo_8h.html  Hugo_8h_source.html  Jacky_8h.html  Jacky_8h_source.html  Lee_8h.html  Lee_8h_source.html  Marco_8h.html  Marco_8h_source.html  Mario_8h.html  Mario_8h_source.html  Michael_8h.html  Michael_8h_source.html  Mike_8h.html  Mike_8h_source.html  Mr_01serious_8h.html  Mr_01serious_8h_source.html  (+1117 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  (+55 more)
espeak-ng-data/: be_dict  phontab  ru_dict
espeak-ng-data-min/: en_dict  phonindex
examples/check-flash/: check-flash.ino
examples/espeak/: espeak.ino
examples/espeak-arduino/: espeak-arduino.ino
examples/espeak-arduino-de/: espeak-arduino-de.ino
examples/espeak-arduino-voice/: espeak-arduino-voice.ino
examples/espeak-audiokit/: espeak-audiokit.ino
examples/espeak-cmake/: CMakeLists.txt  espeak-cmake.cpp
examples/espeak-cmake-files/: CMakeLists.txt  README.md  espeak-cmake.cpp
examples/espeak-min/: espeak-min.ino
examples/espeak-sd/: espeak-sd.ino
examples/sd/: sd.ino
examples/spiffs/: spiffs.ino
src/: FileSystem.h  config-espk.h  config.h  direntx.h  espeak-ng-data.h  espeak.h  speak_lib.h
src/data/: af_dict.h  am_dict.h  an_dict.h  ar_dict.h  as_dict.h  az_dict.h  ba_dict.h  be_dict.h  bg_dict.h  bn_dict.h  bpy_dict.h  bs_dict.h  ca_dict.h  chr_dict.h  cs_dict.h  cv_dict.h  cy_dict.h  da_dict.h  data.h  de_dict.h  el_dict.h  en_dict.h  eo_dict.h  es_dict.h  et_dict.h  eu_dict.h  fa_dict.h  fi_dict.h  fr_dict.h  ga_dict.h  gd_dict.h  gn_dict.h  grc_dict.h  gu_dict.h  hak_dict.h  haw_dict.h  he_dict.h  hi_dict.h  hr_dict.h  ht_dict.h  (+76 more)
src/libespeak-ng/: common.c  compiledata.c  compiledict.c  compilembrola.c  dictionary.c  encoding.c  error.c  espeak_api.c  espeak_command.c  event.c  fifo.c  intonation.c  klatt.c  langopts.c  mnemonics.c  numbers.c  phoneme.c  phonemelist.c  readclause.c  setlengths.c  soundicon.c  spect.c  spect.c.rej  speech.c  speech.h  ssml.c  synth_mbrola.c  synthdata.c  synthdata.h  synthesize.c  synthesize.h  tr_languages.c  translate.c  translateword.c  voices.c  wavegen.c
src/pcaudiolib/: audio.h  audio_audiotools_i2s.cpp  audio_object.h
(+420 files in other folders)
